# netmedika

./: .gitignore  package-lock.json  readme.md  test.db  test_database.db
.github/workflows/: pipeline.yml
api/: .dockerfile  .dockerignore  .env.example  Desktop  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
api/.github/workflows/: ci.yml  pipeline.yml
api/alembic/: env.py
api/alembic/versions/: 45043f41b11b_initial.py  54597ddd9f8a_initial_migration.py  b92f6c5a7a11_add_token_version_to_users.py  fdc81e76a14c_order_model_touched.py
api/controllers/: auth_route.py  order_route.py  profile_route.py
api/helpers/: auth.py
api/medapp_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api/models/: auth_model.py  order_model.py  search.py
api/routes/: auth_route.py  order_route.py  profile_route.py  search_route.py
api/schemas/: auth_schema.py  order_schema.py
api/services/: search.py
api/tests/: conftest.py  database_test.py  test_auth.py  test_orders.py
api/utils/: auth.py  security.py
app/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 8d4b6a3c1e2f_add_rejection_reason_to_orders.py  aeb34cb2e124_init.py  c3e9a7f4d2b1_remove_strength_and_frequency_from_orders.py  d4f7a9c2b8e1_add_processing_order_status.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  auth.py  orders.py  profile.py  router.py
app/core/: __init__.py  config.py  database.py  exceptions.py  security.py
app/model/: __init__.py  order.py  token.py  user.py
app/schema/: __init__.py  order.py  token.py  user.py
app/services/: __init__.py  base.py  file_upload.py  order_service.py  user_service.py
app/tests/: conftest.py  test_auth.py  test_orders.py
frontend/: .env.example  .yarnrc.yml  app.json  eas.json  package-lock.json  package.json  tailwind.config.js
frontend/app/: _layout.tsx  book-test.tsx  index.tsx  login.tsx  register.tsx
frontend/app/(addresses)/: index.tsx
frontend/app/(tabs)/: _layout.tsx  cart.tsx  index.tsx  medicines.tsx  orders.tsx  profile.tsx
frontend/app/admin/(tabs)/: _layout.tsx  index.tsx  orders.tsx  profile.tsx
frontend/app/book-test/: confirm.tsx
frontend/components/: ReusableTabBar.tsx  admin-orders.tsx  admin-users.tsx  auth-ui.tsx  header.tsx  snackbar.tsx
frontend/constants/: theme.ts
frontend/lib/: auth-api.ts  auth-session.ts  config.ts  flash-toast.ts  social-auth.ts
scripts/: deploy_api.sh
terraform/: ec2.tf  main.tf  rds.tf
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  main.css  main.tsx
web/src/components/: DashboardLayout.tsx  RejectModal.tsx  RequireAuth.tsx
web/src/lib/: alerts.ts  api.ts  order-ui.ts  session.ts  theme.ts  types.ts  validation.ts
web/src/pages/: Dashboard.tsx  Login.tsx  OrderDetail.tsx  Orders.tsx  Profile.tsx  Register.tsx  Settings.tsx  Users.tsx
web/src/services/: authService.ts  orderService.ts  userService.ts
