[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medapp-api"
version = "1.0.0"
description = "MedApp API - Healthcare management backend service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NetMedika Team", email = "team@netmedika.com"}
]
maintainers = [
    {name = "NetMedika Team", email = "team@netmedika.com"}
]
keywords = ["fastapi", "healthcare", "api", "medical", "postgresql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "alembic>=1.18.4",
    "annotated-types>=0.7.0",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "click>=8.3.1",
    "cryptography>=46.0.5",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "fastapi-cli>=0.0.24",
    "httpx>=0.28.1",
    "idna>=3.11",
    "jinja2>=3.1.6",
    "limits>=5.8.0",
    "mako>=1.3.10",
    "markdown-it-py>=4.0.0",
    "mdurl>=0.1.2",
    "packaging>=26.0",
    "passlib>=1.7.4",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "rsa>=4.9.1",
    "sentry-sdk>=2.54.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
    "starlette>=0.52.1",
    "typer>=0.24.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
]

[project.scripts]
medapp-api = "main:app"
medapp-migrate = "alembic:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["controllers*", "models*", "schemas*", "service*", "utils*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
exclude = [".venv", "__pycache__", ".pytest_cache", "alembic/versions"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [".venv", "__pycache__", ".pytest_cache", "alembic/versions"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "alembic/*",
    ".venv/*",
    "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]