[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medapp-api"
version = "1.0.0"
description = "NetMedika API - Online Medicine Order App"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NetMedika Team", email = "team@netmedika.com"}
]
maintainers = [
    {name = "NetMedika Team", email = "team@netmedika.com"}
]
keywords = ["fastapi", "healthcare", "api", "medical", "postgresql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # Web framework & server
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",

    # Database
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "psycopg>=3.3.3",               # psycopg3 — drop psycopg2-binary

    # Validation & settings
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "email-validator>=2.3.0",

    # Auth & security
    "python-jose>=3.5.0",           # JWT
    "argon2-cffi>=25.1.0",          # password hashing (drop passlib & bcrypt if unused)
    "cryptography>=46.0.5",         # covers RSA — drop standalone rsa

    # HTTP & forms
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",

    # Rate limiting
    "slowapi>=0.1.9",

    # Config
    "python-dotenv>=1.2.2",

    # Monitoring (remove if Sentry not yet configured)
    "sentry-sdk>=2.54.0",

    # Optional — keep only if used
    # "jinja2>=3.1.6",              # HTML templates
    # "websockets>=16.0",           # WebSocket endpoints
    # "pydantic-extra-types>=2.11.0", # PhoneNumber, Color, etc.
    # "pyyaml>=6.0.3",              # YAML config files
    # "dnspython>=2.8.0",           # DNS email validation
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "anyio>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "watchfiles>=1.1.1",            # moved from core — dev-only (uvicorn --reload)
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "anyio>=4.0.0",
]

[project.scripts]
# Points to a runnable entry point, not an ASGI app object
medapp-api = "uvicorn:main"
medapp-migrate = "alembic:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["controllers*", "models*", "schemas*", "service*", "utils*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "__pycache__", ".pytest_cache", "alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [".venv", "__pycache__", ".pytest_cache", "alembic/versions"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "alembic/*",
    ".venv/*",
    "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]