[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "1.0.0"
description = "NetMedika API - Online Medicine Order App"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "NetMedika Team", email = "team@netmedika.com"}
]
maintainers = [
    {name = "NetMedika Team", email = "team@netmedika.com"}
]
keywords = ["fastapi", "healthcare", "api", "medical", "postgresql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # fastapi[standard] bundles: uvicorn, fastapi-cli, httpx,
    # jinja2, python-multipart, email-validator, typer
    "fastapi[standard]>=0.115.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",  # faster event loop (non-Windows)

    # Database
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "psycopg>=3.3.3",                           # psycopg3 (replaces psycopg2-binary)

    # Validation & settings
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",

    # Auth & security
    "python-jose>=3.5.0",                       # JWT encode/decode
    "argon2-cffi>=25.1.0",                      # password hashing
    "cryptography>=46.0.5",                     # RSA + crypto primitives
    "passlib>=1.7.4",                           # password hashing context

    # Rate limiting
    "slowapi>=0.1.9",

    # Config
    "python-dotenv>=1.2.2",

    # Monitoring (remove if Sentry not yet configured)
    "sentry-sdk>=2.54.0",

    # Optional — uncomment only if your app uses these
    # "websockets>=16.0",                       # WebSocket endpoints
    # "pydantic-extra-types>=2.11.0",           # PhoneNumber, Color, etc.
    # "pyyaml>=6.0.3",                          # YAML config files
    # "dnspython>=2.8.0",                       # DNS-based email validation
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "anyio>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "watchfiles>=1.1.1",            # hot reload for uvicorn --reload
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "anyio>=4.0.0",
]

[project.scripts]
medapp-migrate = "alembic:main"

# ── uv (https://docs.astral.sh/uv/) ──────────────────────────────────────────
# This project is an application (not a library): uv only resolves and
# installs dependencies, the source tree itself is invoked directly.
[tool.uv]
package = false
managed = true
required-version = ">=0.4.0"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "alembic*", ".venv*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "__pycache__", ".pytest_cache", "alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [".venv", "__pycache__", ".pytest_cache", "alembic/versions"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "alembic/*",
    ".venv/*",
    "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]